Wrote webpage skeleton

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,5 +6,5 @@ $second-bg-color: #24283B;
 $primary-color: #2AC3DE;
 $link-color: #f7768e;
 $logo-color: #73daca;
-$txt-color: #7aa2f7;
+$txt-color: #7DCFFF;
 $important-txt-color: #ffffff;
