--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,9 @@
 /* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     background-color: $bg-color;
