--- a/src/app.scss
+++ b/src/app.scss
@@ -2,23 +2,30 @@
 
 html {
     scroll-behavior: smooth;
+    height: 100%;
 }
 
 body {
     margin: 0;
+    height: 100%;
     background-color: $bg-color;
     color: $txt-color;
     font-family: 'Roboto', sans-serif;
 }
 
+h2 {
+    font-size: 3rem;
+}
+
 .btn {
     color: $important-txt-color;
     background-color: $primary-color;
+    border: 1px solid $primary-color;
     padding: 0.7rem;
     border: none;
     &:hover {
-        color: $primary-color;
-        background-color: $important-txt-color;
+        background-color: $bg-color;
+        border: 1px solid $primary-color;
     }
 }
 
