--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,4 @@
-/* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 html {
     scroll-behavior: smooth;
@@ -11,7 +11,7 @@ body {
     height: 100%;
     background-color: $bg-color;
     color: $txt-color;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
 
 h2 {
